* updated exchange requesting, now it does not use ratio but from-to amounts. This is more readable and less error prone. * added toaster popup for player information * game_manager.py updates and fixes
TODO:
* test more
* sleep more caffeinate less
* test usability. White integer is not bad but maybe yellowish would be better.
* adjust images height and width to be equal
* to consider what to do with fox and wolf images

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -159,7 +159,57 @@
         }
 
         #selected-value-indicator {
-        font-weight: bold;
-        color: green;
-        margin-top: 10px;
+            font-weight: bold;
+            color: green;
+            margin-top: 10px;
+        }
+
+        #toaster-container {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            z-index: 1000;
+        }
+
+        .toaster {
+            display: flex;
+            align-items: center;
+            padding: 10px 20px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+            color: white;
+            font-size: 16px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            animation: slide-in 0.5s ease-out, fade-out 0.5s ease-out 4.5s forwards;
+        }
+
+        .toaster.positive {
+            background-color: green;
+        }
+
+        .toaster.informative {
+            background-color: #FFA500;
+        }
+
+        .toaster.negative {
+            background-color: red;
+        }
+
+
+        @keyframes slide-in {
+            from {
+                opacity: 0;
+                transform: translateX(100%);
+            }
+            to {
+                opacity: 1;
+                transform: translateX(0);
+            }
+        }
+
+        @keyframes fade-out {
+            to {
+                opacity: 0;
+                transform: translateX(100%);
+            }
         }
